--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -119,7 +119,7 @@
 </head>
 <body class="flex">
 <a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149"
-                                                                                               src="https://sc01.alicdn.com/kf/H32171f5d680e434f9e810183cb2fefe8X.jpg"
+                                                                                               src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
                                                                                                alt="Fork me on GitHub"
                                                                                                data-recalc-dims="1"></a>
 <h1 style="margin-bottom: 50px"><img src="https://ae01.alicdn.com/kf/H2fc84859291347418b11091fe0e508b8v.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;">GitHub 文件加速</h1>
