--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -118,7 +118,7 @@
     <title>GitHub 文件加速</title>
 </head>
 <body class="flex">
-<a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149"
+<a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149" referrerPolicy="no-referrer"
                                                                                                src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
                                                                                                alt="Fork me on GitHub"
                                                                                                data-recalc-dims="1"></a>
