--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -111,7 +111,7 @@
     <script>
         function toSubmit(e) {
             e.preventDefault()
-            window.open('/' + document.getElementsByName('q')[0].value);
+            window.open(location.href.substr(0, location.href.lastIndexOf('/') + 1) + document.getElementsByName('q')[0].value);
             return false
         }
     </script>
